# vision-object-detection

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  privacy.md  roadmap.md
tests/: test_detection_settings.py  test_mock_detector.py
vision_object_detection/: __init__.py
vision_object_detection/camera/: opencv_camera.py
vision_object_detection/detection/: __init__.py  base.py  draw.py  factory.py  mock.py  settings.py  yolo.py
vision_object_detection/web/: app.py  dependencies.py
vision_object_detection/web/routes/: camera.py  detection.py  pages.py  stream.py
vision_object_detection/web/static/css/: styles.css
vision_object_detection/web/static/js/: app.js
vision_object_detection/web/templates/: index.html
